# cli-reader

./: .gitignore  CMakeLists.txt  CMakeLists.txt.linux  README.md  README_zh.md  build-ubuntu.sh  build_linux_static.sh  check_linux_deps.sh  ebook_reader  linux_ftxui_error.md  setup_build.sh
src/: AppController.cpp  AppController.h  AppState.cpp  AppState.h  Book.h  BookViewModel.cpp  BookViewModel.h  CommonTypes.h  ConfigManager.cpp  ConfigManager.h  DatabaseManager.cpp  DatabaseManager.h  DebugLogger.cpp  DebugLogger.h  EpubParser.cpp  EpubParser.h  EventHandlers.cpp  EventHandlers.h  GoogleAuthManager.cpp  GoogleAuthManager.h  GoogleDriveManager.cpp  GoogleDriveManager.h  HtmlRenderer.cpp  HtmlRenderer.h  IBookParser.h  LibraryManager.cpp  LibraryManager.h  MobiParser.cpp  MobiParser.h  PdfParser.cpp  PdfParser.h  SyncController.cpp  SyncController.h  SystemUtils.cpp  SystemUtils.h  TxtParser.cpp  TxtParser.h  UIComponents.cpp  UIComponents.h  UIUtils.cpp  (+7 more)
